# NanoNNG

./: .codecov.yml  .gitmodules  CMakeLists.txt  DELIVERABLES.md  README.adoc  README.md  TESTING_SCOPE.md  TESTING_SUMMARY.md  TEST_COVERAGE_MAPPING.md  TEST_SUMMARY.md
cmake/: FindMbedTLS.cmake  FindVector_BLF.cmake  (+3 more)
demo/: CMakeLists.txt
demo/async/: CMakeLists.txt
demo/exchange_consumer/: CMakeLists.txt  exchange_consumer.c
demo/mqtt/: mqtt_client.c
demo/mqtt_async/: mqtt_async.c
demo/mqttv5/: mqttv5_client.c
demo/rest/: server.c
src/supplemental/android_keystore2/: CMakeLists.txt  install-keystore2-sdk.sh
src/supplemental/android_keystore2/binder_headers/include_cpp/android/: binder_auto_utils.h  binder_interface_utils.h  persistable_bundle_aidl.h
src/supplemental/android_keystore2/binder_headers/include_ndk/android/: binder_ibinder.h  binder_ibinder_jni.h  binder_parcel.h  binder_parcel_jni.h  binder_status.h  persistable_bundle.h
src/supplemental/android_keystore2/binder_headers/include_platform/android/: binder_ibinder_platform.h  binder_manager.h  binder_process.h  binder_rpc.h  binder_stability.h
src/supplemental/android_keystore2/include/: pki_adapter.h
src/supplemental/android_keystore2/keystore2_cpp_out/: aidl-generate-code.sh
src/supplemental/android_keystore2/keystore2_cpp_out/include/aidl/android/hardware/security/keymint/: Algorithm.h  AttestationKey.h  BeginResult.h  BlockMode.h  BnAlgorithm.h  BnAttestationKey.h  BnBeginResult.h  BnBlockMode.h  BnCertificate.h  BnDigest.h  BnEcCurve.h  BnErrorCode.h  BnHardwareAuthToken.h  BnHardwareAuthenticatorType.h  BnKeyCharacteristics.h  BnKeyCreationResult.h  BnKeyFormat.h  BnKeyMintDevice.h  BnKeyMintHardwareInfo.h  BnKeyMintOperation.h  BnKeyOrigin.h  BnKeyParameter.h  BnKeyParameterValue.h  BnKeyPurpose.h  BnPaddingMode.h  BnSecurityLevel.h  BnTag.h  BnTagType.h  BpAlgorithm.h  BpAttestationKey.h  BpBeginResult.h  BpBlockMode.h  BpCertificate.h  BpDigest.h  BpEcCurve.h  BpErrorCode.h  BpHardwareAuthToken.h  BpHardwareAuthenticatorType.h  BpKeyCharacteristics.h  BpKeyCreationResult.h  (+32 more)
src/supplemental/android_keystore2/keystore2_cpp_out/include/aidl/android/hardware/security/secureclock/: BnSecureClock.h  BnTimeStampToken.h  BnTimestamp.h  BpSecureClock.h  BpTimeStampToken.h  BpTimestamp.h  ISecureClock.h  TimeStampToken.h  Timestamp.h
src/supplemental/android_keystore2/keystore2_cpp_out/include/aidl/android/system/keystore2/: AuthenticatorSpec.h  Authorization.h  BnAuthenticatorSpec.h  BnAuthorization.h  BnCreateOperationResponse.h  BnDomain.h  BnEphemeralStorageKeyResponse.h  BnKeyDescriptor.h  BnKeyEntryResponse.h  BnKeyMetadata.h  BnKeyParameters.h  BnKeyPermission.h  BnKeystoreOperation.h  BnKeystoreSecurityLevel.h  BnKeystoreService.h  BnOperationChallenge.h  BnResponseCode.h  BpAuthenticatorSpec.h  BpAuthorization.h  BpCreateOperationResponse.h  BpDomain.h  BpEphemeralStorageKeyResponse.h  BpKeyDescriptor.h  BpKeyEntryResponse.h  BpKeyMetadata.h  BpKeyParameters.h  BpKeyPermission.h  BpKeystoreOperation.h  BpKeystoreSecurityLevel.h  BpKeystoreService.h  BpOperationChallenge.h  BpResponseCode.h  CreateOperationResponse.h  Domain.h  EphemeralStorageKeyResponse.h  IKeystoreOperation.h  IKeystoreSecurityLevel.h  IKeystoreService.h  KeyDescriptor.h  KeyEntryResponse.h  (+5 more)
src/supplemental/android_keystore2/keystore2_cpp_out/src/android/hardware/security/keymint/: Algorithm.cpp  AttestationKey.cpp  BeginResult.cpp  BlockMode.cpp  Certificate.cpp  Digest.cpp  EcCurve.cpp  ErrorCode.cpp  HardwareAuthToken.cpp  HardwareAuthenticatorType.cpp  IKeyMintDevice.cpp  IKeyMintOperation.cpp  KeyCharacteristics.cpp  KeyCreationResult.cpp  KeyFormat.cpp  KeyMintHardwareInfo.cpp  KeyOrigin.cpp  KeyParameter.cpp  KeyParameterValue.cpp  KeyPurpose.cpp  PaddingMode.cpp  SecurityLevel.cpp  Tag.cpp  TagType.cpp
src/supplemental/android_keystore2/keystore2_cpp_out/src/android/hardware/security/secureclock/: ISecureClock.cpp  TimeStampToken.cpp  Timestamp.cpp
src/supplemental/android_keystore2/keystore2_cpp_out/src/android/system/keystore2/: AuthenticatorSpec.cpp  Authorization.cpp  CreateOperationResponse.cpp  Domain.cpp  EphemeralStorageKeyResponse.cpp  IKeystoreOperation.cpp  IKeystoreSecurityLevel.cpp  IKeystoreService.cpp  KeyDescriptor.cpp  KeyEntryResponse.cpp  KeyMetadata.cpp  KeyParameters.cpp  KeyPermission.cpp  OperationChallenge.cpp  ResponseCode.cpp
src/supplemental/android_keystore2/src/: KeystoreAdapter.cpp  keystore2_selftest.cpp  keystore_inject.cpp
src/supplemental/iceoryx/: CMakeLists.txt  iceoryx_api.c  iceoryx_api.h  iceoryx_api_test.c
src/supplemental/nanolib/: CMakeLists.txt  acl_conf.c  cJSON.c  cmd.c  cmd_test.c  conf.c  conf_test.c  conf_ver2.c  dbtree_test.c  env.c  env_test.c  file.c  file_test.c  hash_table.c  hash_test.c  hocon.c  hocon_test.c  lib_base64_test.c  log.c  log_test.c  md5.c  mqtt_db.c  nanolib.h  parser.c  parser.h  parser.y  retains.c  rule.c  rule_test.c  scanner.c  scanner.l  sql_parse.c  test.h  topics.c  topics_test.c  utils.c
src/supplemental/nanolib/blf/: CMakeLists.txt  blf.cc
src/supplemental/nanolib/encryption/: CMakeLists.txt  encrypt.c  libargon2.so.1
src/supplemental/nanolib/linkedlist/: CMakeLists.txt  linkedlist.c  linkedlist_test.c
src/supplemental/nanolib/parquet/: CMakeLists.txt  parquet.cc  parquet_file_manager.cc  parquet_file_manager.h  parquet_file_queue.cc  parquet_file_queue.h  parquet_metadata_design.md  queue.h  readme.md
src/supplemental/nanolib/ringbuffer/: CMakeLists.txt  ringbuffer.c  ringbuffer_test.c
src/supplemental/nanolib/stream/: CMakeLists.txt  canstream.c  canstream_test.c
src/supplemental/nanolib/test_conf/: nmq_old_test.conf  nmq_test.conf
src/supplemental/quic/: CMakeLists.txt  msquic_common.c  msquic_conn.c  msquic_dial.c  msquic_dial_test.c  msquic_listen.c  quic_api.c  quic_api.h  quic_api_test.c  quic_listener.c  quic_listener_test.c  quic_private.h
src/supplemental/quic/msquic/: CMakeLists.txt
src/supplemental/tls/openssl/: CMakeLists.txt  openssl.c  tee.cc  tee.h  tee2.c  tls_extern_private_key.h
(+283 files in other folders)
