if(NNG_ENABLE_PARQUET)
    nng_sources(parquet.cc parquet_file_queue.cc)
    find_package(Arrow CONFIG REQUIRED)
    find_package(Parquet CONFIG REQUIRED)
    if(ENABLE_PARQUET_SHARED)
        nng_link_libraries(arrow_shared parquet_shared)
    else(ENABLE_PARQUET_SHARED)
        nng_link_libraries(arrow_static parquet_static)
    endif(ENABLE_PARQUET_SHARED)
    # Standalone streaming write test executable
    add_executable(parquet_stream_test parquet_stream_test.cc)
    if(ENABLE_PARQUET_SHARED)
        target_link_libraries(parquet_stream_test PRIVATE arrow_shared parquet_shared)
    else()
        target_link_libraries(parquet_stream_test PRIVATE arrow_static parquet_static)
    endif()
    # nng_test(parquet_test)
endif()
